урок2 - вариант2.1 (добавлен компонент-точка входа App)

--- a/gregory-kovorotny/src/index.html
+++ b/gregory-kovorotny/src/index.html
@@ -3,11 +3,7 @@
     <title>Gregory React App</title>
   </head>
   <body>
-    <div id="user" class="user">
-
-    </div>
-    <div id="developer" class="developer">
-
+    <div id="root">
     </div>
   </body>
 </html>
