--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <title>React App</title>
-  </head>
-  <body></body>
+    <head>
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="bundle.css" rel="stylesheet" type="text/css" />
+
+	</head>
+    <body>
+        <div>TODO write content</div>
+           <script src="bundle.js"></script>
+    </body>
 </html>
