--- a/Sergei_Ogarkov/src/index.html
+++ b/Sergei_Ogarkov/src/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>React App</title>
-    <script src="bundle.js"></script>
-    <link rel="stylesheet" href="bundle.css" />
 </head>
 <body>
-
+    <div id="root"></div>
 </body>
 </html>
