--- a/Marchenko_DS/src/index.html
+++ b/Marchenko_DS/src/index.html
@@ -1,6 +1,12 @@
-<html>
-  <head>
-    <title>React App</title>
-  </head>
-  <body></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Test</title>
+    <link rel="stylesheet" href="bundle.css">
+</head>
+<body>
+<div id="testUser"></div>
+<script src="bundle.js"></script>
+</body>
 </html>
