--- a/Nikolay_But/src/index.html
+++ b/Nikolay_But/src/index.html
@@ -1,8 +1,15 @@
-<html>
-  <head>
-    <title>React App</title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./../vendor/bootstrap.min.css">
+  <script src="./../vendor/bootstrap.min.js"></script>
+  <script src="./../vendor/moment-with-locales.min.js"></script>
+  <title>React App</title>
+</head>
+<body>
     <div id="app"></div>
-  </body>
+</body>
 </html>
