--- a/Kasianova Olesia/src/index.html
+++ b/Kasianova Olesia/src/index.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>React App</title>
-  </head>
-  <body></body>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="robots" content="noindex, nofollow">
+	<title>Kasianova</title>
+</head>
+
+<body>
+	<div id="app"></div>
+</body>
+
 </html>
