--- a/Nikolay_But/src/index.html
+++ b/Nikolay_But/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="./../vendor/moment-with-locales.min.js"></script>
   <title>React App</title>
+  <base href="/" />
 </head>
 <body>
     <div id="app"></div>
